@@ -96,14 +96,9 @@ class ColorChooser( GafferUI.Widget ) :
 
 	def __init__( self, color=IECore.Color3f( 1 ) ) :
 	
-		GafferUI.Widget.__init__( self, QtGui.QWidget() )
-
 		self.__column = GafferUI.ListContainer( GafferUI.ListContainer.Orientation.Vertical )
 		
-		self._qtWidget().setLayout( QtGui.QGridLayout() )
-		self._qtWidget().layout().setSpacing( 0 )
-		self._qtWidget().layout().setContentsMargins( 0, 0, 0, 0 )
-		self._qtWidget().layout().addWidget( self.__column._qtWidget(), 0, 0 )
+		GafferUI.Widget.__init__( self, self.__column )
 
 		self.__color = color
 		self.__defaultColor = color
